RESOLVED FIXED87544
fast/block/inline-children-root-linebox-crash.html asserts after r118567
https://bugs.webkit.org/show_bug.cgi?id=87544
Summary fast/block/inline-children-root-linebox-crash.html asserts after r118567
Simon Fraser (smfr)
Reported 2012-05-25 16:01:54 PDT
Attachments
Cleaner testcase (540 bytes, text/html)
2012-05-25 18:14 PDT, Simon Fraser (smfr)
no flags
Patch (6.93 KB, patch)
2012-05-25 21:47 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2012-05-25 18:14:11 PDT
Created attachment 144177 [details] Cleaner testcase
Stephanie Lewis
Comment 2 2012-05-25 19:00:52 PDT
Stephanie Lewis
Comment 3 2012-05-25 19:01:53 PDT
Oops bad copy/paste. I skipped the test in http://trac.webkit.org/projects/webkit/changeset/118595
Simon Fraser (smfr)
Comment 4 2012-05-25 21:47:09 PDT
WebKit Review Bot
Comment 5 2012-05-26 17:43:30 PDT
Comment on attachment 144192 [details] Patch Clearing flags on attachment: 144192 Committed r118617: <http://trac.webkit.org/changeset/118617>
WebKit Review Bot
Comment 6 2012-05-26 17:43:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.